--- a/thesis/Ch4-RNN/Chapter4.tex
+++ b/thesis/Ch4-RNN/Chapter4.tex
@@ -175,7 +175,7 @@ Both the procedures reuse the blocks of $R$ to reduce the off-chip memory access
 \input{algoLSTMEqns}
 \section{Experimental Setup And Results}
 We have implemented LSTM layers using the conventional, TSIWR~\cite{park2020time}, and our approach and synthesized the design using the SDSoC framework, SDx v2018.3. 
-\figurename{~\ref{fig:lstmFpgaDesign} shows the main components and interfaces of the FPGA design. The design reads $B{\times}B$ size blocks of the four input $R$ matrices ($R_i, R_f, R_g$, and $R_o$) into the local buffers using bufferCopy component and then performs the matrix-vector multiplications using $MxV$ component. The blocks are read in the order specified by the schedule. The schedule for all three approaches is prepared offline. The top-level logic first reads the blocks of $R$ matrices ($R_i, R_f, R_g$, and $R_o$) and invokes computeMxV to compute the four matrix-vector multiplications in parallel. The design uses the dual buffering scheme to overlap the computations with data transfer. The four matrix multiplication units ($MxV_i, MxV_f, MxV_g$, and $MxV_o$) perform matrix-vector multiplications in parallel, and the amount of parallelism in each $MxV$ unit can be configured. 
+\figurename{~\ref{fig:lstmFpgaDesign} shows the main components and interfaces of the FPGA design. The design reads $B{\times}B$ size blocks of the four input $R$ matrices ($R_i, R_f, R_g$, and $R_o$) into the local buffers using bufferCopy component and then performs the matrix-vector multiplications using $M{\times}V$ component. The blocks are read in the order specified by the schedule. The schedule for all three approaches is prepared offline. The top-level logic first reads the blocks of $R$ matrices ($R_i, R_f, R_g$, and $R_o$) and invokes compute $M{\times}V$ to compute the four matrix-vector multiplications in parallel. The design uses the dual buffering scheme to overlap the computations with data transfer. The four matrix multiplication units ($M{\times}V_i, M{\times}V_f, M{\times}V_g$, and $M{\times}V_o$) perform matrix-vector multiplications in parallel, and the amount of parallelism in each $M{\times}V$ unit can be configured. 
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=0.65\columnwidth]{SACC_FPGA_Design}
@@ -185,7 +185,7 @@ We have implemented LSTM layers using the conventional, TSIWR~\cite{park2020time
 
 The design can be configured for different on-chip buffer sizes, hidden units ($N$), and compute resources. We have implemented multiple designs for each of the three approaches to compare the throughput for different numbers of compute resources and buffer sizes. We carried out the experiments on Zedboard, and the target frequency is 100MHz. The off-chip memory is DDR3 connected using a 64-bit AXI bus. We have integrated the Xilinx AXI Performance Monitor (APM) IP to log the number of bytes transferred and memory access latencies for DRAM accesses.
 
-There are eight local buffers each to store the $B{\times}B$ elements of the matrices (\figurename{~\ref{fig:lstmFpgaDesign}}), and two buffers, each of dimension $N$, for storing the vector $h_t$ and $h_{t{+}1}$. Table~\ref{tab:fpgaResources} shows the FPGA resources utilization reported by Vivado for conventional, TSIWR, and our approach, for $B{=}64$ and using 8 DSPs resources ($PARL\_FACTOR{=}8$) in each of the four $MxV$ component. In this case, the total number of DSPs required is $4{\times}PARL\_FACTOR{=}32$.
+There are eight local buffers each to store the $B{\times}B$ elements of the matrices (\figurename{~\ref{fig:lstmFpgaDesign}}), and two buffers, each of dimension $N$, for storing the vector $h_t$ and $h_{t{+}1}$. For TSIWR and our approach, additonal on-chip storage of size $4{\times}N$ is required to store the partial sums of next time steps compared to conventional approach. Since the partial sums are stored in the on-chip memory, there is no additional impact on the latency compared to the conventional approaches. Table~\ref{tab:fpgaResources} shows the FPGA resources utilization reported by Vivado for conventional, TSIWR, and our approach, for $B{=}64$ and using 8 DSPs resources ($PARL\_FACTOR{=}8$) in each of the four $M{\times}V$ component. In this case, the total number of DSPs required is $4{\times}PARL\_FACTOR{=}32$.
 Each of the eight arrays is partitioned into 8 ($PARL\_FACTOR$) to provide the data to compute resources. That results in 64 FPGA RAMB18 resources for storing the $B{\times}B$ blocks and 2 FPGA RAMB18 resources for storing the vector $h_t$ and $h_{t{+}1}$. The remaining RAMB18 blocks are used for other logic and vary for the three approaches. The conventional approach has the most straightforward control logic than TSIWR and our approach. The LUTs and FFs in the case of TSIWR and our approach are higher than the conventional approach. 
 \begin{table}[htb]
 	\centering
