--- a/thesis/Ch5-SOM/Chapter5.tex
+++ b/thesis/Ch5-SOM/Chapter5.tex
@@ -17,7 +17,9 @@ We present a design space exploration of a self-organizing map (SOM) to analyze 
 \section{Background}
 In this section, we briefly introduce the SOM algorithm \cite{Yang2018RiBoSOM}, which has been used to recognize bacterial genomes.
 
-As shown in \figurename{~ \ref{fig:algorithm}}, a SOM network is organized in a circle to match genomic data better. Let us consider a SOM network with $N$ neurons. Each neuron has a weight vector that has the same size as the training vector. Let us assume it to be $M$. Therefore, the weight matrix ($W$) for the SOM network would have $M{\times}N$ weights. The weight vector of $j^{th}$ neuron is shown as $\Bigl[ w_{1,j},w_{2,j},\ldots,w_{M,j}\Bigr]$ in \figurename{~ \ref{fig:algorithm}}. Each element in the input vectors represents one of the four nucleotides ($C,G,T \text{or} A$). Let us assume the input sequence ($IS$), is a group of $S$ input vectors ($I_1, I_2,...,\text{and}~I_S$). During training and inference, the distance of the input vectors from each neuron is calculated, shown using arrows in \figurename{~ \ref{fig:algorithm}}.
+As shown in \figurename{~ \ref{fig:algorithm}}, a SOM network is organized in a circle to match genomic data better ~\cite{Yang2018RiBoSOM}. SOM networks are typically used as 2D arrays when dealing with data that have clear boundaries or start-and-stop conditions. However, for genomic data, especially circular bacterial genomes, it's more accurately represented as a continuous stream without a distinct beginning or end. To prevent any issues from edge effects when presenting data in smaller pieces to the SOM, a circular structure is chosen by Yang et al.~\cite{Yang2018RiBoSOM}. 
+
+Let us consider a SOM network with $N$ neurons. Each neuron has a weight vector that has the same size as the training vector. Let us assume it to be $M$. Therefore, the weight matrix ($W$) for the SOM network would have $M{\times}N$ weights. The weight vector of $j^{th}$ neuron is shown as $\Bigl[ w_{1,j},w_{2,j},\ldots,w_{M,j}\Bigr]$ in \figurename{~ \ref{fig:algorithm}}. Each element in the input vectors represents one of the four nucleotides ($C,G,T \text{or} A$). Let us assume the input sequence ($IS$), is a group of $S$ input vectors ($I_1, I_2,...,\text{and}~I_S$). During training and inference, the distance of the input vectors from each neuron is calculated, shown using arrows in \figurename{~ \ref{fig:algorithm}}.
 \begin{figure}[htb]
 	\centerline{\includegraphics[width=0.6\textwidth]{SOMCircular.pdf}}
 	\caption{SOM based Genomic Identification}
@@ -28,7 +30,7 @@ The training phase is for a specific bacterial genome. The objective of training
 
 \algref{alg:algorithm} describes the actual training and inference processes. During the training process, the algorithm first tries to find the neuron with a minimum distance from the particular input vector. This neuron is considered a winning neuron. Then, the weights of the neighborhood of the winning neuron are updated based on the distance from the winning neuron. The training process is repeated for all training vectors, and the SOM learns the features of that particular bacterial genome.
 
-Random weights initialize the weight matrix. The complete bacterial DNA sequence is chopped randomly into a set of fixed-size training sequences, the $IS$ in \algref{alg:algorithm}, line~\ref{IS_Def}. On the line~\ref{beta_init}, parameters $\beta_{min}$, $decay\_factor$, and $\beta$ are initialized. $\beta$ is used to control the converging process of SOM. $\beta$ is decreased by the factor $decay\_factor$ at each step of the converging process, and $\beta_{min}$ is the minimum value $beta$ can attain. In line~\ref{dist_min} and~\ref{j_min}, the training process first tries finding the winning neuron. Then, weights of the neighborhood of the winning neuron are updated based on the distance between the target neuron and the winning neuron, as shown in line~\ref{dist_update} and~\ref{W_update}. Finally in line~\ref{beta_update}, the parameter $\beta$ is decreased by $decay_factor$. After repeating the training process for all training vectors in the input sequence $IS$, the SOM would have learned the features of that particular bacterial genome. 
+Random weights initialize the weight matrix. The complete bacterial DNA sequence is chopped randomly into a set of fixed-size training sequences, the $IS$ in \algref{alg:algorithm}, line~\ref{IS_Def}. On the line~\ref{beta_init}, parameters $\beta_{min}$, $decay\_factor$, and $\beta$ are initialized. $\beta$ is used to control the converging process of SOM. $\beta$ is decreased by the factor $decay\_factor$ at each step of the converging process, and $\beta_{min}$ is the minimum value $beta$ can attain. In line~\ref{dist_min} and~\ref{j_min}, the training process first tries finding the winning neuron. Then, weights of the neighborhood of the winning neuron are updated based on the distance between the target neuron and the winning neuron, as shown in line~\ref{dist_update} and~\ref{W_update}. Finally in line~\ref{beta_update}, the parameter $\beta$ is decreased by $decay\_factor$. After repeating the training process for all training vectors in the input sequence $IS$, the SOM would have learned the features of that particular bacterial genome. 
 
 During the inference phase, some test DNA fragments from one unknown bacteria are sent to each trained SOM network. The SOM network that correlates the test input sequence best is chosen as the winning SOM, and the bacteria it represents reveals the identity of the unknown test bacteria. The correlation measurement is marked by the score shown in \algref{alg:algorithm} line~\ref{score}. The smaller the score is, the better it correlates with the input test vectors.
 \begin{algorithm}[htb]
