--- a/thesis/Ch6-Conclusion/Chapter6.tex
+++ b/thesis/Ch6-Conclusion/Chapter6.tex
@@ -61,6 +61,9 @@ Future research directions could involve exploring hardware co-design and archit
 We also suggest exploring the incorporation of hardware accelerators specialized for specific NN tasks to improve energy efficiency and performance further. Such accelerators can exploit the specific data access patterns and computations inherent in NN layers.
 
 Moreover, addressing the challenges posed by data reuse in more complex and deeply layered neural networks would be an interesting area of research. Investigating techniques to optimize data reuse in multi-layer and multi-modal NNs could lead to more efficient and powerful edge AI devices.
+
+Future research in genome identification using Self-Organizing Maps (SOMs) could benefit from two key strategies. First, exploring a co-training approach—simultaneously training multiple SOM models on the same dataset—may enhance the model's ability to learn complex genomic patterns. Second, considering weight initialization, using techniques like Principal Component Analysis (PCA) could offer a more informed start for the model, potentially improving its accuracy. These future directions aim to refine SOM training, leading to more accurate and efficient genome identification.
+
 \section{Closing Remarks}
 In conclusion, this thesis has contributed to the state-of-the-art in energy-efficient execution of modern NNs on parallel architectures. The proposed data reuse approaches and partitioning strategies have significantly improved energy efficiency and throughput for various NN layers. The analytical framework developed in this research provides a valuable tool for comparing different data reuse and scheduling schemes and exploring the design space for optimal solutions.
 
