--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -776,3 +776,57 @@
 	title={Towards energy-proportional datacenter memory with mobile DRAM}, 
 	year={2012},
 }
+
+@INPROCEEDINGS{6657019,
+	author={Peemen, Maurice and Setio, Arnaud A. A. and Mesman, Bart and Corporaal, Henk},
+	booktitle={2013 IEEE 31st International Conference on Computer Design (ICCD)}, 
+	title={Memory-centric accelerator design for Convolutional Neural Networks}, 
+	year={2013},
+	volume={},
+	number={},
+	pages={13-19},
+	doi={10.1109/ICCD.2013.6657019}
+}
+
+@INPROCEEDINGS{7092377,
+	author={Peemen, Maurice and Mesman, Bart and Corporaal, Henk},
+	booktitle={2015 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)}, 
+	title={Inter-tile reuse optimization applied to bandwidth constrained embedded accelerators}, 
+	year={2015},
+	volume={},
+	number={},
+	pages={169-174},
+	doi={10.7873/DATE.2015.1033}
+}
+
+@INPROCEEDINGS{7302332,
+	author={Shi, Runbin and Xu, Zheng and Sun, Zhihao and Peemen, Maurice and Li, Ang and Corporaal, Henk and Wu, Di},
+	booktitle={2015 Euromicro Conference on Digital System Design}, 
+	title={A Locality Aware Convolutional Neural Networks Accelerator}, 
+	year={2015},
+	volume={},
+	number={},
+	pages={591-598},
+	doi={10.1109/DSD.2015.70}
+}
+	
+@INPROCEEDINGS{7428073,
+	author={Motamedi, Mohammad and Gysel, Philipp and Akella, Venkatesh and Ghiasi, Soheil},
+	booktitle={2016 21st Asia and South Pacific Design Automation Conference (ASP-DAC)}, 
+	title={Design space exploration of FPGA-based Deep Convolutional Neural Networks}, 
+	year={2016},
+	volume={},
+	number={},
+	pages={575-580},
+	doi={10.1109/ASPDAC.2016.7428073}
+}
+
+@inproceedings{MaYufei,
+	author = {Ma, Yufei and Cao, Yu and Vrudhula, Sarma and Seo, Jae-sun},
+	title = {Optimizing Loop Operation and Dataflow in FPGA Acceleration of Deep Convolutional Neural Networks},
+	year = {2017},
+	doi = {10.1145/3020078.3021736},
+	booktitle = {Proceedings of the 2017 ACM/SIGDA International Symposium on Field-Programmable Gate Arrays},
+	pages = {45–54},
+	series = {FPGA '17}
+}	
